--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -30,6 +30,18 @@ footer div div a {
 .randomProduct, .todayHot  {
 	width: 100%;
 }
+
+.productLink {
+	text-decoration: none;
+}
+
+.productLink:hover {
+	text-decoration: underline;
+}
+
+.productName {
+	font-size: large;
+}
 </style>
 
 </head>
@@ -148,13 +160,27 @@ footer div div a {
 					</nav>
 				</div>
 		</div>
-		
-
 
 
 		<!-- width65 start -->
 		<div class="width65">
-
+			<div class="row">
+				<div class="col-5">
+					<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
+				</div>
+				<div class="col">
+					<div class="row">
+						<div class="col">
+							<p class="productName">언탭트 남성용 오버핏 스웨트 고중량 후드</p>
+							<p><img src="../../images/user/productView/starRatingImg.png"><span><a href="" style="text-decoration: none;">32개 상품평</a></span></p>
+						</div>
+						<div class="col-4">
+							<button class="btn btn-outline-danger rounded-circle"><i class="bi bi-heart"></i></button>
+							<button class="btn btn-outline-primary rounded-circle"><i class="bi bi-share-fill"></i></button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- width65 end -->
 
@@ -178,54 +204,51 @@ footer div div a {
 				<div class="carousel-item active">
 					<div class="card-group width65">
 						<div class="card">
-							<a>
+							<a class="productLink link-dark">
 								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct1.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
 							</a>
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
-							<div class="card-footer box-white">
-								<small class="text-muted">Last updated 3 mins ago</small>
-							</div>
-
-						</div>
-						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct2.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct3.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct2.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct3.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct5.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
+							<div class="card-footer box-white">
+								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
+						</div>
+						<div class="card">
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct5.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
@@ -235,51 +258,51 @@ footer div div a {
 				<div class="carousel-item">
 					<div class="card-group width65">
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct6.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct6.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct7.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct7.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct8.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct8.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct9.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct9.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct10.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct10.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
@@ -289,51 +312,51 @@ footer div div a {
 				<div class="carousel-item">
 					<div class="card-group width65">
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct11.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct11.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct12.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct12.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct13.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct13.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct14.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct14.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
 						</div>
 						<div class="card">
-							<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct15.jpg">
-							<div class="card-body">
-								<h5 class="card-title">상품이름</h5>
-								<p class="card-text fw-bold">상품가격</p>
-							</div>
+							<a class="productLink link-dark">
+								<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct15.jpg">
+								<span class="fs-5 d-block pt-2 px-1">상품이름</span>
+							</a>
+							<p class="card-text fw-bold pt-2 px-1 mb-5">상품가격</p>
 							<div class="card-footer box-white">
 								<small class="text-muted">Last updated 3 mins ago</small>
 							</div>
