--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -95,7 +95,7 @@ footer div div a {
 
 				<div class="row">
 					<div class="col-2">
-						<img src="../../images/user/mainPage/coupang2.png" style="width: 175px;">
+						<a href="./mainPage.html" title="COUPANG"><img src="../../images/user/mainPage/coupang2.png" style="width: 175px;"></a>
 					</div>
 					<div class="col-6">
 						<div class="input-group">
