--- a/public/durian/html/user/mainPage.html
+++ b/public/durian/html/user/mainPage.html
@@ -40,6 +40,10 @@ footer div div a {
 .productLink:hover {
 	text-decoration: underline;
 }
+
+.btnText {
+	font-size: small;
+}
 </style>
 
 </head>
@@ -79,7 +83,7 @@ footer div div a {
 							<!-- data-bs-toggle="dropdown" -->
 							<button class="btn btn-primary btn-lg" style="width: 110px; height: 115px;">
 								<i class="bi bi-list fs-2"></i>
-								<div style="font-size: small;">카테고리</div>
+								<div class="btnText">카테고리</div>
 							</button>
 						</a>
 						<ul class="dropdown-menu">
@@ -116,13 +120,11 @@ footer div div a {
 					<div class="col">
 						<button>
 							<i class="bi bi-person"></i>
-							<br>
-							마이쿠팡
+							<div class="btnText">마이쿠팡</div>
 						</button>
 						<button>
 							<i class="bi bi-cart4"></i>
-							<br>
-							장바구니
+							<div class="btnText">장바구니</div>
 						</button>
 					</div>
 
