--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -7,45 +7,9 @@
 <link rel="stylesheet" href="../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../css/style.css">
+<link rel="stylesheet" href="../../css/styleCoupang.css">
 
 <style type="text/css">
-ul.nav li.dropdown:hover>ul.dropdown-menu {
-	display: block;
-	margin: 0;
-}
-
-footer div div a {
-	text-decoration: none;
-	color: black;
-	padding: 5px;
-}
-
-.footerNav {
-	font-size: small;
-	padding: 8px;
-}
-.nav-item {
-	font-size: small;
-}
-.randomProduct, .todayHot  {
-	width: 100%;
-}
-
-.productLink {
-	text-decoration: none;
-}
-
-.productLink:hover {
-	text-decoration: underline;
-}
-
-.productName {
-	font-size: large;
-}
-
-.btnText {
-	font-size: small;
-}
 </style>
 
 </head>
