--- a/public/durian/html/xdmin/loginout/regForm2.html
+++ b/public/durian/html/xdmin/loginout/regForm2.html
@@ -91,7 +91,7 @@ label {
 							<div class="invalid-feedback" id="ifmmPwdInvalidFeedBack">사용 불가능한 비밀번호입니다.</div>
 
 							<label for="ifmmPwdConfirm">비밀번호 확인</label>
-							<input name="ifmmPwdConfirm" id="ifmmPwdConfirm" type="password" class="form-control">
+							<input name="ifmmPwdConfirm" id="ifmmPwdConfirm" type="password" class="form-control" disabled>
 							<div class="valid-feedback" id="ifmmPwdConfirmValidFeedBack">비밀번호가 일치합니다.</div>
 							<div class="invalid-feedback" id="ifmmPwdConfirmInvalidFeedBack">비밀번호가 일치하지 않습니다.</div>
 
@@ -208,11 +208,13 @@ label {
 								$("#ifmmPwd").removeClass("is-invalid");
 								$("#ifmmPwdValidFeedBack").show();
 								$("#ifmmPwdInvalidFeedBack").hide();
+								$("#ifmmPwdConfirm").removeAttr("disabled");
 							} else if (!regExp.test(pwd1) && pwd1.length > 1) {
 								$("#ifmmPwd").addClass("is-invalid");
 								$("#ifmmPwd").removeClass("is-valid");
 								$("#ifmmPwdValidFeedBack").hide();
 								$("#ifmmPwdInvalidFeedBack").show();
+								$("#ifmmPwdConfirm").attr("disabled", "disabled");
 							}
 
 							if (pwd1 != "" && pwd2 != "") {
@@ -221,13 +223,13 @@ label {
 									$("#ifmmPwdConfirm").removeClass("is-invalid");
 									$("#ifmmPwdConfirmValidFeedBack").show();
 									$("#ifmmPwdConfirmInvalidFeedBack").hide();
-									$("#submit").removeAttr("disabled");
+									$("#btnSubmit").removeAttr("disabled");
 								} else {
 									$("#ifmmPwdConfirm").addClass("is-invalid");
 									$("#ifmmPwdConfirm").removeClass("is-valid");
 									$("#ifmmPwdConfirmValidFeedBack").hide();
 									$("#ifmmPwdConfirmInvalidFeedBack").show();
-									$("#submit").attr("disabled", "disabled");
+									$("#btnSubmit").attr("disabled", "disabled");
 								}
 							}
 						});
