--- a/public/durian/html/xdmin/loginout/regForm2.html
+++ b/public/durian/html/xdmin/loginout/regForm2.html
@@ -122,6 +122,8 @@ label {
 							</div>
 							<input name="" id="" type="text" class="form-control" placeholder="인증번호를 입력하세요">
 
+							<div class="h-captcha" data-sitekey="61b1df23-f9f7-40ca-aa8c-4c11ff0c7fde"></div>
+							
 							<input type="submit" id="btnSubmit" class="btn btn-outline-dark d-block w-100" value="가입하기">
 
 
@@ -235,6 +237,8 @@ label {
 						});
 	});
 </script>
+
+<script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 
 </body>
 </html>
