--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -45,9 +45,9 @@
 
 			<div class="col-1 offset-2 justify-content-end">
 				<ul class="nav">
-					<li class="nav-item dropdown">
-						<a class="nav-link link-light dropdown-toggle p-0" href="#"> <!-- data-bs-toggle="dropdown" -->
-							<button class="btn btn-primary btn-lg" style="width: 110px; height:115px;">
+					<li class="nav-item dropdown"><a class="nav-link link-light dropdown-toggle p-0" href="#">
+							<!-- data-bs-toggle="dropdown" -->
+							<button class="btn btn-primary btn-lg" style="width: 110px; height: 115px;">
 								<i class="bi bi-list fs-2"></i>
 								<div class="btnText">카테고리</div>
 							</button>
@@ -65,7 +65,9 @@
 
 				<div class="row">
 					<div class="col-2">
-						<a href="./mainPage.html" title="COUPANG"><img src="../../images/user/mainPage/coupang2.png" style="width: 175px;"></a>
+						<a href="./mainPage.html" title="COUPANG">
+							<img src="../../images/user/mainPage/coupang2.png" style="width: 175px;">
+						</a>
 					</div>
 					<div class="col-6">
 						<div class="input-group">
@@ -112,19 +114,19 @@
 			</div>
 
 		</div>
-		
+
 		<div class="row">
 			<div class="col offset-2 py-3 d-flex">
-					<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-						<ol class="breadcrumb" style="font-size: small;">
-							<li class="breadcrumb-item">쿠팡 홈</li>
-							<li class="breadcrumb-item">남성패션</li>
-							<li class="breadcrumb-item">의류</li>
-							<li class="breadcrumb-item">맨투맨/후드티</li>
-							<li class="breadcrumb-item active" aria-current="page">후드티</li>
-						</ol>
-					</nav>
-				</div>
+				<nav style="-bs-breadcrumb-divider: '&gt;';" aria-label="breadcrumb">
+					<ol class="breadcrumb" style="font-size: small;">
+						<li class="breadcrumb-item">쿠팡 홈</li>
+						<li class="breadcrumb-item">남성패션</li>
+						<li class="breadcrumb-item">의류</li>
+						<li class="breadcrumb-item">맨투맨/후드티</li>
+						<li class="breadcrumb-item active" aria-current="page">후드티</li>
+					</ol>
+				</nav>
+			</div>
 		</div>
 
 
@@ -135,14 +137,42 @@
 					<img class="randomProduct" src="../../images/user/mainPage/product/randomProduct4.jpg">
 				</div>
 				<div class="col">
-					<div class="row">
-						<div class="col">
-							<p class="productName">언탭트 남성용 오버핏 스웨트 고중량 후드</p>
-							<p><img src="../../images/user/productView/starRatingImg.png"><span><a href="" style="text-decoration: none;">32개 상품평</a></span></p>
+					<div class="row border-bottom border-2 m-1 align-items-center">
+						<div class="col p-0">
+							<p class="productName m-0">언탭트 남성용 오버핏 스웨트 고중량 후드</p>
+							<p>
+								<img src="../../images/user/productView/starRatingImg.png">
+								<span>
+									<a href="" style="text-decoration: none;">32개 상품평</a>
+								</span>
+							</p>
 						</div>
-						<div class="col-4">
-							<button class="btn btn-outline-danger rounded-circle"><i class="bi bi-heart"></i></button>
-							<button class="btn btn-outline-primary rounded-circle"><i class="bi bi-share-fill"></i></button>
+						<div class="col-3 text-end">
+							<button class="btn btn-outline-danger rounded-circle">
+								<i class="bi bi-heart"></i>
+							</button>
+							<button class="btn btn-outline-primary rounded-circle">
+								<i class="bi bi-share-fill"></i>
+							</button>
+						</div>
+					</div>
+					<div class="row border-bottom border-1 m-1 py-2">
+						<div class="col p-0 py-1">
+							<p class="productPrice m-0">28,900 원</p>
+						</div>
+					</div>
+					<div class="row border-bottom border-1 m-1 py-2">
+						<div class="col p-0 py-1">
+							<p class="m-0 fw-bold">무료배송</p> 
+							<p class="m-0" style="font-size:small;"><span class="arrivalDate">내일(일) 3/27</span> 도착 보장 (2시간 36분 내 주문 시 / 서울⋅경기 기준)</p>
+						</div>
+					</div>
+					<div class="row border-bottom border-1 m-1 py-2">
+						<div class="col p-0 py-1">
+							사이즈 
+							<p class="m-0" style="font-size:small;"><span class="arrivalDate">내일(일) 3/27</span> 도착 보장 (2시간 36분 내 주문 시 / 서울⋅경기 기준)</p>
+							색상 
+							<p class="m-0" style="font-size:small;"><span class="arrivalDate">내일(일) 3/27</span> 도착 보장 (2시간 36분 내 주문 시 / 서울⋅경기 기준)</p>
 						</div>
 					</div>
 				</div>
@@ -348,22 +378,30 @@
 	<footer class="mt-5 bg-light">
 		<div class="row p-2 border-top border-bottom">
 			<div class="col d-flex justify-content-center align-items-center">
-				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>|
-				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>|
-				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank" class="footerNav">인재채용</a>|
-				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B" class="footerNav">입점 / 제휴문의</a>|
-				<a href="https://csmessenger.coupang.com/cs-center/notice/main" class="footerNav">공지사항</a>|
-				<a href="https://csmessenger.coupang.com/cs-center/voc/main" class="footerNav">고객의 소리</a>|
-				<a href="/np/policies/terms" class="footerNav">이용약관</a>|
-				<a href="/np/policies/privacy" class="footerNav fw-bold">
-					개인정보 처리방침
-				</a>|
-				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter" class="footerNav">쿠팡페이 이용약관</a>|
-				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy" class="footerNav fw-bold">
-					쿠팡페이 개인정보처리방침
-				</a>|
-				<a href="/np/safety" class="footerNav">신뢰관리센터</a>|
-				<a href="https://partners.coupang.com/" target="_blank" class="footerNav">제휴마케팅</a>|
+				<a href="https://www.aboutcoupang.com/ko/" target="_blank" style="border: none;" class="footerNav">회사소개</a>
+				|
+				<a href="https://ir.aboutcoupang.com/English/home/" target="_blank" class="footerNav">Investor Relations</a>
+				|
+				<a href="https://rocketyourcareer.kr.coupang.com" target="_blank" class="footerNav">인재채용</a>
+				|
+				<a href="https://wing.coupang.com/vendor/joining/welcome?inflow=WEB_FOOTER_B" class="footerNav">입점 / 제휴문의</a>
+				|
+				<a href="https://csmessenger.coupang.com/cs-center/notice/main" class="footerNav">공지사항</a>
+				|
+				<a href="https://csmessenger.coupang.com/cs-center/voc/main" class="footerNav">고객의 소리</a>
+				|
+				<a href="/np/policies/terms" class="footerNav">이용약관</a>
+				|
+				<a href="/np/policies/privacy" class="footerNav fw-bold"> 개인정보 처리방침 </a>
+				|
+				<a href="https://rocketpay.coupang.com/rocketpay/operationTerms/coupangPcFooter" class="footerNav">쿠팡페이 이용약관</a>
+				|
+				<a href="https://rocketpay.coupang.com/rocketpay/coupangpay-terms-v2/privacy-policy" class="footerNav fw-bold"> 쿠팡페이 개인정보처리방침 </a>
+				|
+				<a href="/np/safety" class="footerNav">신뢰관리센터</a>
+				|
+				<a href="https://partners.coupang.com/" target="_blank" class="footerNav">제휴마케팅</a>
+				|
 				<a href="https://ads.coupang.com" target="_blank" class="footerNav">광고안내</a>
 			</div>
 		</div>
@@ -392,7 +430,7 @@
 				<a href="https://csmessenger.coupang.com/cs-center/chat/main" class="call-center" title="365 고객센터" style="font-size: small;">
 					<strong>365고객센터</strong> | 전자금융거래분쟁처리담당
 					<br>
-					<em style="font-size:x-large;" class="fw-bold">1577-7011 (유료)</em>
+					<em style="font-size: x-large;" class="fw-bold">1577-7011 (유료)</em>
 					<br>
 					서울시 송파구 송파대로 570
 					<br>
@@ -431,9 +469,15 @@
 					</p>
 				</div>
 				<div class="col-3">
-					<a href="https://www.facebook.com/Coupang.korea" target="_blank" class="text-light" title="쿠팡 페이스북"><img src="../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="width:32px;"></a>
-					<a href="https://news.coupang.com/" target="_blank" class="text-light" title="쿠팡 뉴스룸"><img src="../../images/xdmin/sns_icon/icon_round_naver_48.png" style="width:32px;"></a>
-					<a href="https://www.instagram.com/coupang" target="_blank" class="text-light" title="쿠팡 인스타그램"><img src="../../images/xdmin/sns_icon/icon_round_instgram_48.png" style="width:32px;"></a>
+					<a href="https://www.facebook.com/Coupang.korea" target="_blank" class="text-light" title="쿠팡 페이스북">
+						<img src="../../images/xdmin/sns_icon/icon_round_facebook_48.png" style="width: 32px;">
+					</a>
+					<a href="https://news.coupang.com/" target="_blank" class="text-light" title="쿠팡 뉴스룸">
+						<img src="../../images/xdmin/sns_icon/icon_round_naver_48.png" style="width: 32px;">
+					</a>
+					<a href="https://www.instagram.com/coupang" target="_blank" class="text-light" title="쿠팡 인스타그램">
+						<img src="../../images/xdmin/sns_icon/icon_round_instgram_48.png" style="width: 32px;">
+					</a>
 				</div>
 			</div>
 		</div>
