--- a/public/durian/html/user/productView.html
+++ b/public/durian/html/user/productView.html
@@ -168,12 +168,36 @@
 						</div>
 					</div>
 					<div class="row border-bottom border-1 m-1 py-2">
-						<div class="col p-0 py-1">
-							사이즈 
-							<p class="m-0" style="font-size:small;"><span class="arrivalDate">내일(일) 3/27</span> 도착 보장 (2시간 36분 내 주문 시 / 서울⋅경기 기준)</p>
-							색상 
-							<p class="m-0" style="font-size:small;"><span class="arrivalDate">내일(일) 3/27</span> 도착 보장 (2시간 36분 내 주문 시 / 서울⋅경기 기준)</p>
+						<div class="col p-0 py-1" style="font-size: small">
+							사이즈 <br>
+							<select class="form-select" style="width:18%; font-size: small;">
+								<option>::선택::</option>
+								<option>L</option>
+								<option>M</option>
+								<option>S</option>
+							</select> <br>
+							색상 <br>
+							<select class="form-select" style="width:18%; font-size: small;">
+								<option>::선택::</option>
+								<option>White</option>
+								<option>Black</option>
+							</select>
 						</div>
+					</div>
+					<div class="row m-1 py-2 align-items-center">
+						<div class="col-2 p-0"><input class="form-control" type="number" value="1" min="1" style="height: 38px;"></div>
+						<div class="col px-1"><button class="btn btn-info w-100 rounded-0 text-white">장바구니 담기</button></div>
+						<div class="col p-0"><button class="btn btn-primary w-100 rounded-0">바로 구매</button></div>
+					</div>
+					<div class="row m-1 py-2">
+						<ul class="productDetails">
+							<li>의류 핏: 오버핏</li>						
+							<li>안감 종류: 기본</li>						
+							<li>소재: 폴리에스터</li>						
+							<li>색상계열: 블랙계열</li>						
+							<li>상의 사이즈: 남성 XL (105)</li>						
+							<li>쿠팡상품번호: 6111245966 - 11519354261</li>						
+						</ul>
 					</div>
 				</div>
 			</div>
