--- a/public/durian/html/user/productCheckOut.html
+++ b/public/durian/html/user/productCheckOut.html
@@ -13,10 +13,13 @@
 th {
 	width: 20%;
 	text-align: right;
+	vertical-align: middle;
 }
 
 td {
+	height: 50px;
 	text-align: left;
+	vertical-align: middle;
 }
 </style>
 
